<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:orientation="vertical">
    <ExpandableListView
        android:id="@+id/android:list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
    </ExpandableListView>

    <CheckBox
        android:id="@+id/lightUnset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/lightUnset"/>

    <EditText
        android:id="@+id/inputIpServer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputIP"
        android:gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"/>

    <EditText
        android:id="@+id/inputPageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/inputPageSize"
        android:gravity="center"
        android:inputType="number"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"/>

    <Button
        android:id="@+id/saveSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/add_btn"
        android:textColor="#f0f0f0"
        tools:fontFamily="serif-monospace"
        android:text="@string/save"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"/>


</LinearLayout>