<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:visibility="visible"
        tools:context=".ComplexTypesActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/complexTypes">
    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <TableLayout
            android:id="@+id/allComplexTypesTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
        </TableLayout>
    </ScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/components">
    </TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <TableLayout
            android:id="@+id/componentsOfComplexTypeTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
        </TableLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">

        <Button
            android:id="@+id/backToMain"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/back"
            android:textSize="20dp"
            android:background="@drawable/add_btn"
            android:textColor="#f0f0f0"
            tools:fontFamily="serif-monospace"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/deleteComplexTypeBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:textSize="15dp"
            android:background="@drawable/add_btn"
            android:textColor="#f0f0f0"
            tools:fontFamily="serif-monospace"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/changeComplexTypeBtn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/change"
            android:textSize="15dp"
            android:background="@drawable/add_btn"
            android:textColor="#f0f0f0"
            tools:fontFamily="serif-monospace"
            android:layout_marginRight="5dp"/>
        <Button
            android:id="@+id/newComplexType"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/newItem"
            android:textSize="20dp"
            android:background="@drawable/add_btn"
            android:textColor="#f0f0f0"
            tools:fontFamily="serif-monospace"/>
    </LinearLayout>

</android.widget.LinearLayout>