<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootComponentManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100"
        android:visibility="visible"
        tools:context=".ComponentManagerActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:gravity="center"
        android:text="@string/components"></TextView>
    <ScrollView
        android:id="@+id/componentManagerScroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp">
        <TableLayout
            android:id="@+id/allComponentsTable"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:stretchColumns="*">
        </TableLayout>

    </ScrollView>

    <Button
        android:id="@+id/deleteComponent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/add_btn"
        android:textColor="#f0f0f0"
        tools:fontFamily="serif-monospace"
        android:text="@string/delete"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="horizontal"
        android:weightSum="100"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/inputComponentName"
            android:layout_width="0dp"
            android:layout_weight="80"
            android:layout_height="match_parent"
            android:hint="@string/inputComponentName"
            android:layout_marginRight="5dp"/>


        <Button
            android:id="@+id/addComponentBtn"
            android:layout_width="0dp"
            android:layout_weight="20"
            android:layout_height="match_parent"
            android:text="@string/add"
            android:textSize="10dp"
            android:background="@drawable/add_btn"
            android:textColor="#f0f0f0"
            tools:fontFamily="serif-monospace"/>
    </LinearLayout>

    <Button
        android:id="@+id/toComponentOfCT"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:background="@drawable/add_btn"
        android:textColor="#f0f0f0"
        tools:fontFamily="serif-monospace"
        android:text="@string/back"
        android:layout_marginBottom="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"/>

</android.widget.LinearLayout>